- PR#6742: remove duplicate virtual_flag information from Tstr_class
- PR#6719: improve Buffer.add_channel when not enough input is available
  (Simon Cruanes)
* PR#6816: reject integer and float literals followed by alphanum
  (Hugo Heuzard)
- PR#6876: improve warning 6 by listing the omitted labels.
  (Eyyüb Sari)
- PR#6924: tiny optim to avoid some spilling of floats in x87
  (Alain Frisch)
- GPR#111: `(f [@taillcall]) x y` warns if `f x y` is not a tail-call
  (Simon Cruanes)
- GPR#118: ocamldep -allow-approx: fallback to a lexer-based approximation
  (Frédéric Bour)
- GPR#137: add untypeast.ml (in open recursion style) to compiler-libs
  (Gabriel Radanne)
- GPR#142: add a CAMLdrop macro for undoing CAMLparam*/CAMLlocal*
- GPR#145: speeedup bigarray access by optimizing Cmmgen.bigarray_indexing
  (Vladimir Brankov, review by Gabriel Scherer)
- GPR#147: [type 'a result = Ok of 'a | Error of 'b] in Pervasives
  (Yaron Minsky)
- GPR#156, GPR#279: optimize caml_frame_descriptors realloc (dynlink speedup)
  (Pierre Chambart, Alain Frisch,
   review by François Bobot, Xavier Leroy and Damien Doligez)
- GPR#191: Making gc.h and some part of memory.h public
  (Thomas Refis)
- GPR#196: Make [Thread.id] and [Thread.self] [noalloc]
  (Clark Gaebel)
- GPR#165, GPR#221: fix windows compilation warnings
  (Bernhard Schommer, Gabriel Scherer, report by Alain Frisch)
- GPR#189: Added .dylib and .so as extensions for ocamlmklib
  (Edgar Aroutiounian, whitequark)
- GPR#237: a CONTRIBUTING document
  (François Bobot, Gabriel Scherer, review by Xavier Leroy)
- GPR#245: remove a few remaining French comments
  (Florian Angeletti)
- GPR#252: improve build instructions in MSVC Windows README
  (Philip Daian)

OCaml 4.02.3 (27 Jul 2015):
---------------------------

Bug fixes:
- PR#6908: Top-level custom printing for GADTs: interface change in 4.02.2
  (Grégoire Henry, report by Jeremy Yallop)
- PR#6919: corrupted final_table
  (ygrek)