@@ -355,6 +355,8 @@ Features wishes:
   (Eyyüb Sari)
 - PR#6924: tiny optim to avoid some spilling of floats in x87
   (Alain Frisch)
+- PR#7031: warning on ambiguous guarded or-patterns
+  (Gabriel Scherer, report by Martin Clochard and Claude Marché)
 - GPR#111: `(f [@taillcall]) x y` warns if `f x y` is not a tail-call
   (Simon Cruanes)
 - GPR#118: ocamldep -allow-approx: fallback to a lexer-based approximation
